# cclv

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.beads/: issues.jsonl
.claude/: settings.json
.claude/hooks/: check-rust.sh
.github/workflows/: release.yml
.specify/memory/: constitution.md
benches/: hit_test.rs  scroll_benchmark.rs  search_benchmark.rs
examples/: stress_scroll.rs
investigations/: cclv-4pp.md  cclv-5ur.13.md  cclv-5ur.40.md
nix/: devshell.nix  treefmt.nix
proptest-regressions/state/: session_modal.txt
proptest-regressions/tests/: scroll_properties.txt
scripts/: record-demo.sh
specs/001-claude-code-log-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-view-state-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-session-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/: integration.rs  lib.rs  main.rs  test_harness.rs
src/config/: keybindings.rs  loader.rs  loader_tests.rs  mod.rs
src/logging/: logging_tests.rs  mod.rs
src/model/: conversation_entry.rs  error.rs  identifiers.rs  key_action.rs  log_entry.rs  malformed_entry.rs  message.rs  mod.rs  session.rs  stats.rs  usage.rs
src/parser/: mod.rs
src/snapshots/: cclv__test_harness__help_overlay_visible.snap  cclv__test_harness__test_harness_after_tab.snap  cclv__test_harness__test_harness_state_after_scroll.snap  cclv__test_harness__test_harness_state_after_scroll.snap.new  cclv__test_harness__test_harness_state_initial.snap
src/source/: file.rs  mod.rs  stdin.rs
src/state/: app_state.rs  app_state_conversation_selection_test.rs  app_state_routing_test.rs  app_state_session_navigation_wiring_test.rs  app_state_stats_filter_cycle_test.rs  app_state_tests.rs  app_state_unified_tabs_test.rs  expand_handler.rs  expand_handler_tests.rs  log_pane.rs  log_pane_tests.rs  match_navigation_handler.rs  match_navigation_handler_tests.rs  mod.rs  mouse_handler.rs  mouse_handler_tests.rs  scroll_handler.rs  scroll_handler_auto_scroll_tests.rs  scroll_handler_migration_tests.rs  scroll_handler_tab_routing_tests.rs  scroll_handler_tests.rs  search.rs  search_input_handler.rs  search_tests.rs  (+10 more)
tests/: acceptance_harness.rs  acceptance_harness_test.rs  acceptance_scroll.rs  acceptance_us1.rs  acceptance_us2.rs  acceptance_us3.rs  acceptance_us4.rs  acceptance_us5.rs  e2e_smoke.rs  e2e_stdin_repro.rs  event_driven_rendering.rs  help_overlay_tests.rs  key_action_tests.rs  log_pane_integration_test.rs  parse_real_logs.rs  property_tests.rs  scroll_properties.proptest-regressions  scroll_properties.rs  stats_multi_scope_tests.rs  tool_block_nowrap_default.rs  tui_integration.rs  version.rs  view_snapshots.rs  view_state_invariants.rs  view_state_us2_expand_collapse.rs  view_state_us3_mouse_hit_testing.rs  view_state_us4_render_caching.rs  wrap_property_tests.rs
(+193 files in other folders)
