[package]
name = "cclv"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Claude Code Log Viewer Contributors"]
description = "TUI application for viewing Claude Code JSONL session logs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/cclv"
readme = "README.md"
keywords = ["tui", "log-viewer", "jsonl", "claude"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
