[package]
name = "cclv"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Claude Code Log Viewer Contributors"]
description = "TUI application for viewing Claude Code JSONL session logs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/cclv"
readme = "README.md"
keywords = ["tui", "log-viewer", "jsonl", "claude"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tui-markdown = { version = "0.3", features = ["highlight-code"] }
unicode-width = "0.2"
toml = "0.8"
dirs = "6.0"
lru = "0.12"

[features]
e2e-tests = []  # Feature flag to enable E2E smoke tests

[dev-dependencies]
proptest = "1"
insta = "1"
criterion = "0.5"
serial_test = "3"
expectrl = "0.7"  # For E2E smoke tests (non-optional but tests gated by feature)

[[bench]]
name = "search_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
warnings = "deny"
